# data-pipeline-flow

./: .gitignore  HANDOVER_DYNAMIC_PATHS.md  INSTALL_ANALYSIS.md  README.md  install.py  pyproject.toml
docs/: configuration.md  interactive_wrappers.md
example/configs/: project_config.yaml
example/output/: test5.dot  test6.dot
skills/: pipeline-clusters.md  pipeline-inspect.md  pipeline-manual-edges.md  pipeline-setup.md
src/data_pipeline_flow/: __init__.py  __main__.py  _check_install.py
src/data_pipeline_flow/cli/: helpers.py  main.py
src/data_pipeline_flow/config/: schema.py
src/data_pipeline_flow/parser/: multi_extract.py  python_extract.py  r_extract.py  stata_extract.py
src/data_pipeline_flow/render/: dot.py
src/data_pipeline_flow/rules/: manual_edges.py
tasks/dynamic_paths/: task-dp-01-python-replicate.md  task-dp-02-python-fix.md  task-dp-03-r-replicate.md  task-dp-04-r-fix.md  task-dp-05-stata-replicate.md  task-dp-06-stata-fix.md
tests/: test_task01_import_edge_direction.py  test_task02_dynamic_paths.py  test_task03_abs_path_partial.py  test_task04_graphviz_windows.py  test_task05_silent_config_failures.py  test_task07_stata_macros.py  test_task08_stata_do_direction.py  test_task09_r_dynamic_paths.py  test_task10_r_source_direction.py
tests/fixtures/abs_path/: reader.py  writer.py
tests/fixtures/bad_config_key/: pipeline_user_settings.yaml
tests/fixtures/dynamic_paths/: consumer.py  fstring_writer.py  script_a.py
tests/fixtures/import_direction/: helper.py  main_script.py
tests/fixtures/python_dynamic_paths/: FINDINGS.md  (+12 more)
(+82 files in other folders)
